--- a/package.json
+++ b/package.json
@@ -1,47 +1,61 @@
 {
-   "name": "node-express-typeorm",
-   "version": "1.0.0",
-   "description": "Simple app with Express and TypeORM",
-   "main": "index.js",
-   "scripts": {
-      "dev": "NODE_PATH=src nodemon --watch src src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs",
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "orm:schema:sync": "ts-node ./node_modules/.bin/typeorm schema:sync -d src/data-source.ts",
-      "orm:schema:drop": "ts-node ./node_modules/.bin/typeorm schema:drop -d src/data-source.ts",
-      "orm:schema:log": "ts-node ./node_modules/.bin/typeorm schema:log -d src/data-source.ts"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/vasildakov/node-express-typeorm.git"
-   },
-   "keywords": [
-      "node",
-      "express",
-      "typeorm",
-      "orm",
-      "typescript"
-   ],
-   "author": "",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/vasildakov/node-express-typeorm/issues"
-   },
-   "homepage": "https://github.com/vasildakov/node-express-typeorm#readme",
-   "dependencies": {
-      "express": "^4.18.2",
-      "mysql": "^2.14.1",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.11"
-   },
-   "devDependencies": {
-      "@tsconfig/node-lts-strictest-esm": "^18.12.1",
-      "@types/body-parser": "^1.19.2",
-      "@types/express": "^4.17.15",
-      "@types/node": "^16.11.10",
-      "colors": "^1.4.0",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   }
+    "name": "node-express-typeorm",
+    "version": "1.0.0",
+    "description": "Simple app with Express and TypeORM",
+    "main": "index.ts",
+    "scripts": {
+        "build": "tsc --project .",
+        "dev": "nodemon src/index.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/vasildakov/node-express-typeorm.git"
+    },
+    "keywords": [
+        "node",
+        "express",
+        "typeorm",
+        "orm",
+        "typescript",
+        "javascript"
+    ],
+    "author": "Vasil Dakov",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/vasildakov/node-express-typeorm/issues"
+    },
+    "homepage": "https://github.com/vasildakov/node-express-typeorm#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "helmet": "^6.0.1",
+        "mysql": "^2.14.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "0.3.11"
+    },
+    "devDependencies": {
+        "@tsconfig/node-lts-strictest-esm": "^18.12.1",
+        "@types/body-parser": "^1.19.2",
+        "@types/express": "^4.17.15",
+        "@types/jest": "^29.2.4",
+        "@types/node": "^16.11.10",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "colors": "^1.4.0",
+        "dotenv": "^16.0.3",
+        "eslint": "^8.30.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard-with-typescript": "^24.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "jest": "^29.3.1",
+        "nodemon": "^2.0.20",
+        "ts-jest": "^29.0.3",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.5.2"
+    }
 }
