--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
    "compilerOptions": {
       "lib": ["es5", "es6", "dom"],
-      "target": "es5",  
+      "target": "ES2020",  
       "module": "commonjs",
-      "baseUrl": "./src",
+      "baseUrl": ".",
+      "rootDir": "./src",
       "outDir": "./dist",
       "moduleResolution": "node",
       "esModuleInterop": true,
       "strictPropertyInitialization": false,
-      "forceConsistentCasingInFileNames": true,
       "strict": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true, 
       "paths": {}, 
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
    },
-   "exclude": ["node_modules", "dist"],
-   "include": ["src"],
+   "exclude": ["node_modules", "tests", "dist"],
+   "include": ["src/**/*"]
+   
 }
