--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.ts",
     "scripts": {
         "build": "tsc --project .",
-        "dev": "nodemon src/index.ts"
+        "dev": "nodemon --watch src src/index.ts"
     },
     "repository": {
         "type": "git",
